Fixed spacing on hero-statement description

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -4,5 +4,3 @@
   align-items: center;
 }
 
-#hero_statement_desc {
-}
