--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,13 @@ body {
   background-color: #E7EBC5;
 }
 
+h1 {
+  margin: 0 !important;
+  padding: 0;
+}
+
 p {
+  margin: 0;
   font-size: 20px;
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
